[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src=" https://scontent.fccu5-1.fna.fbcdn.net/v/t1.0-9/20155946_2334207026803915_6708874394364414561_n.jpg?oh=0ec9da1bfe7fdb6dfe5711c802fb70f0&oe=5B0B7A5B" />
         </div>
         <br>
         <div class="center text-big bold">
